<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/colorDialogBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_register_fragment_title"
                android:textColor="@color/colorDialogTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:orientation="horizontal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_register_fragment_name"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/edittext_hint_register_fragment_name"
                        android:textSize="@dimen/register_location_text_size"
                        android:id="@+id/editText_register_location_name"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_register_fragment_location"
                        />

                    <TextView
                        android:id="@+id/textView_register_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:textSize="@dimen/register_location_text_size"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_register_fragment_address"
                        />

                    <TextView
                        android:id="@+id/textView_register_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:textSize="@dimen/register_location_text_size"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <CheckBox
                        android:id="@+id/checkbox_regsiter_location_sea_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_span="2"
                        android:layout_weight="1"
                        android:textColor="@color/colorText"
                        android:text="@string/label_register_fragment_sea_level" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_register_fragment_color"
                    />

                <TextView
                    android:id="@+id/textView_register_color"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorDefault3DTextView"
                    android:textSize="@dimen/register_location_text_size"
                    />

                <Space android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="10dp"
                    android:textSize="@dimen/map_register_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_create"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/label_register_fragment_color_select"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="10dp"
                    android:textSize="@dimen/map_register_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_create"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/button_register"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/map_register_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_close"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/button_cancel"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>